Add Preact, Unistore, and HTM

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-	Hello, world!
-  
+	<script src="preact.min.js"></script>
+	<script src="unistore-preact.min.js"></script>
+	<script src="htm.min.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
